Tests for locationAPI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,12 @@ android {
     }
 
     testOptions {
+        unitTests.returnDefaultValues = true
         unitTests {
             includeAndroidResources = true
         }
     }
+
 }
 
 dependencies {
