--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.9'
     testImplementation 'androidx.test:rules:1.4.0'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    implementation 'androidx.activity:activity-ktx:1.6.0'
+    implementation "androidx.fragment:fragment:1.4.1"
+    implementation "androidx.activity:activity:1.4.0"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     annotationProcessor 'androidx.room:room-compiler:2.4.2'
